# FaceAI

./: README.md  settings.gradle
FaceAi/: build.gradle  consumer-rules.pro
FaceAi/src/androidTest/java/com/felix/face/: ExampleInstrumentedTest.kt  MediaPipeLivenessEngineTest.kt
FaceAi/src/main/: AndroidManifest.xml
FaceAi/src/main/cpp/: CMakeLists.txt  faceai-jni.cpp
FaceAi/src/main/java/com/felix/face/: ActionType.kt  BlinkState.kt  EngineCallback.kt  FaceCode.kt  FaceLog.kt  HeadShakeState.kt  MediaPipeLivenessEngine.kt  Scene.kt  YuvToRgbConverter.kt
FaceAi/src/main/res/values/: strings.xml  themes.xml
FaceAi/src/main/res/values-night/: themes.xml
FaceAi/src/test/java/com/felix/face/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
